--- a/views/articles/_form_fields.ejs
+++ b/views/articles/_form_fields.ejs
@@ -1,23 +1,23 @@
-<div class="form-group">
-  <label for="title">Title</label>
-  <input required value="<%= article.title %>" type="text" name="title" id="title" class="form-control">
-</div>
-<div class="form-group">
-  <label for="link">link</label>
-  <textarea name="link" id="link" class="form-control"><%= article.link %></textarea>
-</div>
-<div class="form-group">
-  <label for="description">Miniature</label>
-  <textarea name="image" id="image" class="form-control"><%= article.image %> </textarea>
-</div>
-<div class="form-group">
-  <label for="description">Description</label>
-  <textarea name="description" id="description" class="form-control"><%= article.description %></textarea>
-</div>
-<div class="form-group">
-  <label for="markdown">Markdown</label>
-  <textarea required name="markdown" id="markdown" class="form-control"><%= article.markdown %></textarea>
-</div>
 
+<div class="form-group">
+  <label for="title" style="color: white;">Title</label>
+  <input required value="<%= article.title %>" type="text" name="title" id="title" class="form-control" style="background-color: #000000; color: white;">
+</div>
+<div class="form-group">
+  <label for="description" style="color: white;">Description</label>
+  <textarea name="description" id="description" class="form-control" style="background-color: #000000; color: white;"><%= article.description %></textarea>
+</div>
+<div class="form-group">
+  <label for="link" style="color: white;">link</label>
+  <textarea name="link" id="link" class="form-control" style="background-color: #000000; color: white;"><%= article.link %></textarea>
+</div>
+<div class="form-group">
+  <label for="description" style="color: white;">Miniature</label>
+  <textarea name="image" id="image" class="form-control" style="background-color: #000000; color: white;"><%= article.image %> </textarea>
+</div>
+<div class="form-group">
+  <label for="markdown" style="color: white;">Category</label>
+  <textarea required name="markdown" id="markdown" class="form-control" style="background-color: #000000; color: white;"><%= article.markdown %></textarea>
+</div>
 <a href="/" class="btn btn-secondary">Cancel</a>
 <button type="submit" class="btn btn-primary">Save</button>
