--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -4,25 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet"> 
+  <link rel="shortcut icon" href="assets/SIDO2.png">
   <link rel="stylesheet" href="style.css">
-  <title>SIDO Admin</title>
+  <title>SIDO - Blog</title>
 </head>
 <body>
   <section id="home">
     <header>
       <a href="www.sidoexe.web.app"><img class="logo" src="assets/SIDO2.png" alt=""></a>
-      <a href="/articles/new" class="btn-article">New Article</a>
+      <a href="/articles/new" class=""></a>
     </header>
     <div class="cards">
       <% articles.forEach(article => { %>
         <div class="card">
           <div class="card-body">
             <div class="bg" style="background-image: url(<%= article.image %>);" ></div>
-            <h1><a href="<%= article.link %>" target="_BLANK"><%= article.title %></a></h1>
-            <div class="card-text mb-2"><%= article.description %></div>
-            <form action="/articles/<%= article.id %>?_method=DELETE" method="POST" class="d-inline">
-              <button type="submit" class="btn btn-danger">Delete</button>
-            </form>
+            <h5><%= article.markdown %></h5>
+            <h1><%= article.title %></h1>
+            <h4><%= article.createdAt.toLocaleDateString() %></h4>
+            <p class="card-text"><%= article.description %></p>
+            <p><a href="<%= article.link %>" target="_BLANK">GET THE LINK >>></a></p>
           </div>
         </div>
       <% }) %>
