--- a/views/articles/new.ejs
+++ b/views/articles/new.ejs
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Blog</title>
+  <link rel="shortcut icon" href="assets/SIDO.png">
+  <title>SIDO - NewPost</title>
 </head>
-<body>
+<body style="background-color: black;">
   <div class="container">
-    <h1 class="mb-4">New Article</h1>
+    <h1 class="mb-4" style="color: white;">New Post</h1>
 
     <form action="/articles" method="POST">
       <%- include('_form_fields') %>
