--- a/views/articles/style.css
+++ b/views/articles/style.css
@@ -101,40 +101,59 @@ header .logo {
 }
 
 .card {
-  text-align: center;
+  text-align: left;
   display: flex;
   flex-direction: column;
   margin-top: 40px;
   margin-left: 1vw;
   margin-right: 2vw;
-  height: 300px;
   width: 431px;
   border-radius: 10px;
-  background-color: white;
+  background-color: #ffffff;
 }
 
 .card .bg {
   width: 100%;
-  height: 200px;
+  height: 250px;
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
   background-size: cover;
   background-position: center;
 }
 
+.card-body h5 {
+  color: #ffffff;
+  margin: 12px 12px 6px 12px;
+  padding: 7px;
+  width: fit-content;
+  background-color: #000000;
+  font-size: 1.2rem;
+}
+
 .card-body h1 {
-  padding: 8px 8px 0px 8px;
+  padding: 12px 12px 6px 12px;
   font-size: 3rem;
 }
 
-button {
+.card-body h4 {
+  padding: 5px 12px;
+  color: grey;
+  font-family: "sido";
+  font-size: 1.3rem;
+}
+
+.card-body p {
+  padding: 6px 12px 13px 12px;
+  font-family: "Poppins";
+  font-size: 1.4rem;
+}
+
+.card-body a {
   cursor: pointer;
-  font-family: "SIDO";
-  color: #ffffff;
-  background-color: black;
-  border: none;
-  padding: 3px;
-  border-radius: 5px;
+  font-family: "sido";
+  text-decoration: none;
+  color: #000000;
+  font-size: 1.4rem;
 }
 
 @media screen and (max-width: 825px) {
