--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet"> 
-  <link rel="shortcut icon" href="assets/SIDO2.png">
+  <link rel="shortcut icon" href="assets/SIDO.png">
   <link rel="stylesheet" href="style.css">
   <title>SIDO - Blog</title>
 </head>
@@ -15,7 +15,7 @@
   <section id="home">
     <header>
       <a href="www.sidoexe.web.app"><img class="logo" src="assets/SIDO2.png" alt=""></a>
-      <a href="/articles/new" class=""></a>
+      <a href="https://sidoexe.web.app" class="btn-article">PORTFOLIO</a>
     </header>
     <div class="cards">
       <% articles.forEach(article => { %>
