--- a/views/articles/style.css
+++ b/views/articles/style.css
@@ -84,12 +84,13 @@ header .logo {
 }
 
 .btn-article {
-  color: #000000;
+  color: #ffffff;
   padding: 10px;
   margin-top: 35px;
   margin-right: 35px;
   border-radius: 10px;
-  background-color: #ffffff;
+  background-color: #000000;
+  border-color: #ffffff;
   text-decoration: none;
   font-size: 3rem;
 }
